fixAndFeat:解决了跨域问题,并增加了一个获取用户信息的接口
