# api/route/route.go
@@ -3,8 +3,10 @@ package route
 import (
 	"github.com/GitEval/GitEval-Backend/conf"
 	"github.com/GitEval/GitEval-Backend/middleware"
+	"github.com/gin-contrib/cors"
 	"github.com/gin-gonic/gin"
 	"github.com/google/wire"
+	"time"
 )
 
 var ProviderSet = wire.NewSet(
@@ -40,12 +42,15 @@ type UserControllerProxy interface {
 	GetNation(ctx *gin.Context)
 	GetDomain(ctx *gin.Context)
 	SearchUser(ctx *gin.Context)
+	GetUserInfo(ctx *gin.Context)
 }
 
 func NewRouter(authController AuthControllerProxy, userController UserControllerProxy, m *middleware.Middleware) *gin.Engine {
 	r := gin.New()
 	r.Use(gin.Logger())
 	r.Use(gin.Recovery())
+	// 添加 CORS 中间件
+	r.Use(corsHdl())
 	g := r.Group("/api/v1")
 	//认证服务
 	authGroup := g.Group("/auth")
@@ -60,17 +65,28 @@ func NewRouter(authController AuthControllerProxy, userController UserController
 	userGroup.GET("/getNation", m.AuthMiddleware(), userController.GetNation)
 	userGroup.GET("/getDomain", m.AuthMiddleware(), userController.GetDomain)
 	userGroup.GET("/search", m.AuthMiddleware(), userController.SearchUser)
-
-	//后续的接口应该用group来管理
-	//例如:
-	/*
-			UserGroup := r.Group("/api/user")
-		{
-			//conf也可以注入到user中
-			user := NewUser()
-			UserGroup.POST("/login", user.Login)
-			UserGroup.GET("/getinfo", middleware.JWTAuthMiddleware(), user.GetUserInfo)
-		}
-	*/
+	userGroup.GET("/getUserInfo", m.AuthMiddleware(), userController.GetUserInfo)
 	return r
+}
+
+func corsHdl() gin.HandlerFunc {
+	return cors.New(cors.Config{
+		// 允许的请求头
+		AllowHeaders: []string{"Content-ContentType", "Authorization", "Origin"},
+		// 是否允许携带凭证（如 Cookies）
+		AllowCredentials: true,
+		// 解决跨域问题,这个地方允许所有请求跨域了,之后要改成允许前端的请求,比如localhost
+		AllowOriginFunc: func(origin string) bool {
+			//检测请求来源是否以localhost开头
+			//if strings.HasPrefix(origin, "localhost") {
+			//	return true
+			//}else {
+			//	return false
+			//}
+			return true
+		},
+
+		// 预检请求的缓存时间
+		MaxAge: 12 * time.Hour,
+	})
 }
