# controller/user.go
@@ -231,6 +231,43 @@ func (c *UserController) SearchUser(ctx *gin.Context) {
 	}
 }
 
+// GetUserInfo 根据userid获取用户详细信息
+// @Summary 根据userid获取用户详细信息
+// @Tags User
+// @Param user_id query string true "用户的user_id"
+// @Produce json
+// @Success 200 {object} response.Success{data=response.User} "用户信息获取成功"
+// @Failure 400 {object} response.Err "请求参数错误"
+// @Router /api/v1/user/getUserInfo [get]
+func (c *UserController) GetUserInfo(ctx *gin.Context) {
+	var req request.GetUserInfo
+
+	// 解析请求体，绑定到结构体
+	if err := ctx.ShouldBindJSON(&req); err != nil {
+		ctx.JSON(http.StatusBadRequest, response.Err{
+			Err: fmt.Errorf("invalid request: %w", err),
+		})
+		return
+	}
+
+	user, err := c.userService.GetUserById(ctx, req.UserId)
+	if err != nil {
+		ctx.JSON(http.StatusOK, response.Err{
+			Err: fmt.Errorf("GetUserById: %w", err),
+		})
+		return
+	}
+
+	domain := c.userService.GetDomains(ctx, req.UserId)
+	ctx.JSON(http.StatusOK, response.Success{
+		Data: response.User{
+			U:      user,
+			Domain: domain,
+		},
+		Msg: "success",
+	})
+}
+
 func getUserID(ctx *gin.Context) (int64, error) {
 	userID, exist := ctx.Get("user_id")
 	if !exist {
